--- a/API/client/src/index.css
+++ b/API/client/src/index.css
@@ -1,13 +1,20 @@
+html,
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+  margin: 0px;
+  font-size: 16px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container {
+  height: 100%;
+  width: 100%;
+  margin: 0 0;
 }
+
+.left-col {
+ background-color: white;
+}
+
+.right-col {
+  background-color: black !important;
+ }
