--- a/API/client/src/index.css
+++ b/API/client/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap");
+
 html,
 body {
   height: 100%;
@@ -24,8 +26,8 @@ body {
 
 nav.navbar {
   background-color: rgb(76, 187, 48) !important;
+  font-family: 'Roboto', sans-serif;
 }
-
 
 .container {
   height: 100%;
@@ -76,4 +78,28 @@ img.splash-image {
 
 .user-icon {
   margin: 0px 8px 2px 0px;
+}
+
+.log-in-text {
+  font-family: 'Roboto', sans-serif;
+}
+
+.input-col {
+}
+
+.log-in-header {
+  margin-top: 60px;
+}
+
+.key-icon {
+  height: 45px;
+  width: 45px;
+  color: rgb(76, 187, 48);
+}
+
+.form-control.username-input {
+  border-radius: 0rem;
+}
+
+label.label-text {
 }
