--- a/API/client/src/index.css
+++ b/API/client/src/index.css
@@ -1,11 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap");
 
+#root {
+  height: 100%;
+}
 html,
 body {
   height: 100%;
   margin: 0px;
   font-size: 16px;
-  font-family: 'Roboto', sans-serif !important;
+  font-family: "Roboto", sans-serif !important;
 }
 
 .landing-row {
@@ -27,7 +30,7 @@ body {
 
 nav.navbar {
   background-color: rgb(76, 187, 48) !important;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .container {
@@ -42,6 +45,41 @@ nav.navbar {
 
 .right-col {
   margin-top: 15%;
+}
+
+/* containers */
+
+.main-container {
+  height: 100%;
+  background: linear-gradient(to bottom, #000000 20%, #030e01 50%) !important;
+  padding: 15px;
+}
+
+.user-container {
+  border-radius: 0.4rem;
+  background: rgb(15, 15, 15);
+  height: 20%;
+  width: 350px !important;
+  padding: 10px;
+  margin: 40px 0px 0px 40px !important;
+}
+
+.holdings-container {
+  margin: 40px 0px 0px 40px !important;
+  width: 40% !important;
+  height: 70%;
+  border-radius: 0.4rem;
+  background: rgb(15, 15, 15);
+  padding: 10px;
+}
+
+.browse-container {
+  margin: 40px 0px 0px 40px !important;
+  width: 40% !important;
+  height: 70%;
+  border-radius: 0.4rem;
+  background: rgb(15, 15, 15);
+  padding: 10px;
 }
 
 img.splash-image {
@@ -82,7 +120,7 @@ img.splash-image {
 }
 
 .log-in-text {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .input-col {
@@ -106,7 +144,6 @@ label.label-text {
 }
 
 button {
-
 }
 
 button.log-in-button {
@@ -124,4 +161,31 @@ button.log-in-button:hover {
 
 .landing-page-buttons {
   margin-left: 20px !important;
+}
+
+.heading-text {
+  color: rgb(219, 219, 219);
+}
+
+.titles-text {
+  font-size: 0.8rem;
+  color: rgb(156, 156, 156);
+}
+
+.name-text {
+  font-size: 0.9rem;
+  color: rgb(219, 219, 219);
+}
+
+#holdings {
+margin-left: 50%;
+}
+
+#holding-text {
+  margin-left: 33%;
+
+  }
+
+.users-col {
+
 }
