--- a/API/client/src/index.css
+++ b/API/client/src/index.css
@@ -58,16 +58,16 @@ nav.navbar {
 .user-container {
   border-radius: 0.4rem;
   background: rgb(15, 15, 15);
-  height: 20%;
-  width: 160px !important;
+  height: 30%;
+  width: 450px !important;
   padding: 10px;
   margin: 40px 0px 0px 40px !important;
 }
 
 .holdings-container {
   margin: 40px 0px 0px 40px !important;
-  width: 40% !important;
-  height: 70%;
+  width: 90% !important;
+  height: 60%;
   border-radius: 0.4rem;
   background: rgb(15, 15, 15);
   padding: 10px;
@@ -168,7 +168,6 @@ button.log-in-button:hover {
 }
 
 .titles-text {
-  font-size: 0.8rem;
   color: rgb(156, 156, 156);
   margin-left: 0 !important;
 }
@@ -178,7 +177,6 @@ button.log-in-button:hover {
 }
 
 .name-text {
-  font-size: 0.9rem;
   color: rgb(219, 219, 219);
   width: 75px;
   margin: 0 !important;
@@ -269,4 +267,16 @@ hr {
 
 .modal-input {
   border-radius: 0rem !important;
+}
+
+.review-button {
+  border-radius: 0 !important;
+  margin-top: 10px;
+  width: 30%;
+}
+
+.cancel-button {
+  width: 30%;
+  border-radius: 0 !important;
+  margin-top: 12px;
 }
