--- a/API/client/src/index.css
+++ b/API/client/src/index.css
@@ -67,10 +67,10 @@ nav.navbar {
 .holdings-container {
   margin: 0px 0px 0px 40px !important;
   width: 475px !important;
-  height: 20%;
   border-radius: 0.4rem;
   background: rgb(15, 15, 15);
   padding: 10px;
+  padding-bottom: 20px;
 }
 
 .browse-container {
