fixed issues with buy/sell stock. Added loading bar for purchase redirect to user portal.

--- a/API/client/src/index.css
+++ b/API/client/src/index.css
@@ -383,3 +383,9 @@ margin: 15px 234px;
 button.close {
   padding: 6px 20px !important;
 }
+
+.css-1sxbfa7 {
+  margin-top: 40px;
+  margin-left: 50%;
+  padding: 0;
+}
