--- a/API/client/src/index.css
+++ b/API/client/src/index.css
@@ -2,6 +2,7 @@
 
 #root {
   height: 100%;
+  background: linear-gradient(to bottom, #000000 20%, #030e01 50%) !important;
 }
 html,
 body {
@@ -9,6 +10,7 @@ body {
   margin: 0px;
   font-size: 16px;
   font-family: "Roboto", sans-serif !important;
+  background: linear-gradient(to bottom, #000000 20%, #030e01 50%) !important;
 }
 
 .landing-row {
