--- a/API/client/src/index.css
+++ b/API/client/src/index.css
@@ -52,6 +52,7 @@ nav.navbar {
 .main-container {
   height: 100%;
   background: linear-gradient(to bottom, #000000 20%, #030e01 50%) !important;
+  padding: 15px 15px;
 }
 
 .user-container {
